--- a/.github/workflows/master.yaml
+++ b/.github/workflows/master.yaml
@@ -13,7 +13,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
         with:
-          persist-credentials: false
+          persist-credentials: true
           fetch-depth: 0
 
       - name: Setup go
@@ -37,19 +37,10 @@ jobs:
         with:
           files: README.md
 
-      - name: Commit changes
+      - uses: EndBug/add-and-commit@v9
         if: steps.verify-changed-files.outputs.files_changed == 'true'
-        run: |
-          git config --local user.email "action@github.com"
-          git config --local user.name "GitHub Action"
-          git add README.md
-          git commit -m "chore: Updated coverage badge."
-
-      - name: Commit & Push changes
-        if: steps.verify-changed-files.outputs.files_changed == 'true'
-        uses: actions-js/push@master
         with:
-          author_email: action@github.com
+          add: README.md
           author_name: GitHub Action
+          author_email: action@github.com
           message: "chore: Updated coverage badge."
-          github_token: ${{ secrets.GITHUB_TOKEN }}
